# Asteroids

./: CMakeLists.txt  README.md  build.sh
include/: Asteroid.hpp  Bullet.hpp  Debug.hpp  Errors.hpp  Game.hpp  GameObject.hpp  Geometry.hpp  Input.hpp  Player.hpp  Random.hpp  Renderer.hpp  ResourceManager.hpp  Shader.hpp  Texture2D.hpp  Timer.hpp  Vertex.hpp  Window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: simple.frag  simple.vert
src/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  Debug.cpp  Errors.cpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Geometry.cpp  Geometry.hpp  Input.cpp  Player.cpp  Player.hpp  Random.cpp  Random.hpp  Remnant.cpp  Remnant.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Timer.cpp  Timer.hpp  Window.cpp  main.cpp
